# project-project-in-maths-modelling-nm

./: .gitignore  LICENSE  README.md  feature_saver.py  nakulreadme.md  pyproject.toml  readme.md  requirements.txt
data/: synthetic_txns.csv
models/: booster_0.txt  booster_1.txt  booster_2.txt  booster_3.txt  booster_4.txt  feature_importance_top10.csv  features.json  final_predictions.csv  model_scores.csv  threshold.json
src/banksim_fraud/: api.py  cli.py  config.py  features.py  init.py  model.py
src/banksim_fraud/models/: booster_0.txt  booster_1.txt  booster_2.txt  booster_3.txt  booster_4.txt  threshold.json
tools/: dashboard.py  feature_imp_extractor.py  feature_saver.py  generate_synthetic_data.py  model_comparison.py  model_comparison_improved.py  plot_model_scores.py  run_demo.py  stream_and_score.py
