[project]
name = "banksim-fraud"
version = "0.1.0"
description = "LightGBM undersample-ensemble fraud detector for BankSim"
authors = [{ name = "Mani Jose, Nakul Krishna R" }]
requires-python = ">=3.8"

dependencies = [
    "pandas>=1.4",
    "numpy>=1.22",
    "lightgbm>=4.0",
    "imbalanced-learn>=0.11",
    "scikit-learn>=1.3",
    "networkx>=3.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29"
]

[project.scripts]
banksim-train = "banksim_fraud.cli:train"
banksim-score = "banksim_fraud.cli:score"
